--- a/calculator.html
+++ b/calculator.html
@@ -3,82 +3,8 @@
 
 <head>
     <title>Calculator</title>
+    <link rel="stylesheet" href="calculator.css">
 </head>
-<style>
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        margin: 0;
-        font-family: Helvetica, Arial, sans-serif;
-        background-color: #fbfbfb;
-    }
-
-    .calculator {
-
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        width: 350px;
-        color: #ffffff;
-        background-color: #000000;
-    }
-
-    .display {
-        background-color: rgb(80, 80, 80);
-        color: #fff;
-        padding: 20px 20px;
-        border-radius: 5px;
-        text-align: right;
-        font-size: 29px;
-        margin-bottom: 10px;
-    }
-
-    .button-row {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 0px;
-        width: auto;
-        height: 80px
-    }
-
-    input[type="button"] {
-        background-color: #575757c1;
-        color: #ffffff;
-        border-radius: 5px;
-        border: none;
-        font-size: 28px;
-        cursor: pointer;
-        flex: 1;
-        margin: 4px 2px;
-    }
-
-    input[type="button"][value="AC"],
-    input[type="button"][value="+/-"],
-    input[type="button"][value="%"],
-    input[type="button"][value="÷"],
-    input[type="button"][value="*"],
-    input[type="button"][value="-"],
-    input[type="button"][value="+"],
-    input[type="button"][value="="] {
-        background-color: #ff9500;
-        color: #fff;
-    }
-
-    input[type="button"][value="0"] {
-
-        padding-left: 50px;
-        padding-right: 50px;
-        text-align: center;
-    }
-
-    .calc-display {
-        font-size: 50px;
-        padding: 10px;
-        text-align: right;
-    }
-</style>
 
 <body>
 
@@ -115,34 +41,7 @@
         </div>
 
     </div>
-    <script>
-        function clearScreen() {
-            document.getElementById("result").value = "";
-        }
-
-        function display(value) {
-            var displayValue = document.getElementById("result").value;
-
-            if (value === '*') {
-                displayValue += '*';
-            } else if (value === '÷') {
-                displayValue += '/';
-            } else {
-                displayValue += value;
-            }
-
-            document.getElementById("result").value = displayValue;
-        }
-        function calculate() {
-            var expression = document.getElementById("result").value;
-
-            try {
-                var result = eval(expression);
-                document.getElementById("result").value = result;
-            } catch (error) {
-                document.getElementById("result").value = "Error";
-            }
-        }
+    <script src="calculator.js">
 
     </script>
 
