--- a/calculator.html
+++ b/calculator.html
@@ -41,10 +41,7 @@
         </div>
 
     </div>
-    <script src="calculator.js">
-
-    </script>
-
+    <script src="calculator.js"></script> 
 
 </body>
 
